# imdb-rs

./: Cargo.toml  README.md
src/: api.rs  config.rs  datasets.rs  indexer.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  scoring.rs  state.rs  types.rs  utils.rs
tests/: api_endpoints.rs  scoring.rs
