[package]
name = "imdb-rs"
version = "0.1.0"
edition = "2024"
description = "IMDB search service using Tantivy and Axum"
authors = ["Julian <julian@example.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", features = ["json"] }
csv = "1.3"
dotenvy = "0.15"
futures-util = "0.3"
flate2 = "1.1"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = { version = "0.25", default-features = false, features = [
    "mmap",
    "stopwords",
    "lz4-compression",
] }
tokio = { version = "1.47", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "signal",
    "sync",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_test = "1.0"
tower = { version = "0.5", features = ["util"] }

[profile.dev]
opt-level = 3
